# maschine3-hal

./: 99-maschine-mk3.rules  CLAUDE.md  Cargo.toml  DUAL_SCREEN_UPDATE.md  LICENSE-MIT  LINUX_SETUP.md  README.md  UNITY_INTEGRATION.md  UNITY_LINUX_SETUP.md  UNITY_QUICKSTART.md  build-unity-linux-bundle.sh  build-unity-linux.sh  build-unity-versioned.sh  build-unity.bat  build-unity.sh  check-permissions.sh  copy-cs-only.sh  csrootcodemk3-hal.gitignore  shell.nix  update-unity.sh
.claude/: settings.local.json
docs/: MaschineMK3-Display.md  MaschineMK3-HIDInput.md  MaschineMK3-HIDOutput.md  MaschineMK3-Overview.md  NEXT_STEPS.md  PROTOCOL_TEST.md  packet_analysis.md
examples/: basic_test.rs  color_test.rs  debug_input.rs  display_color_test.rs  display_debug.rs  display_debug_colors.rs  display_header_fix.rs  display_real_protocol.rs  display_test.rs  display_test2.rs  display_usb_test.rs  display_working_base.rs  input_monitor.rs  input_monitor_nohid.rs  led_animation.rs  light_pads.rs  linux_platform_test.rs  ni_ipc_test.rs  ni_udp_hack.rs  protocol_test_basic.rs  protocol_test_colors.rs  protocol_test_coords.rs  protocol_test_correct_colors.rs  protocol_test_coverage.rs  protocol_test_exact.rs  protocol_test_fullscreen.rs  protocol_test_perfect_fill.rs  protocol_test_simple.rs  protocol_test_swapped.rs  raw_loader  raw_loader.rs  reactive_leds.rs  screen_animation.rs  simple_async_monitor.rs  simple_test.rs  simple_toggle_3.rs  test_alignment.rs  test_coords.rs  test_dirty_progress.rs  test_ffi_complex.rs  (+4 more)
shell_scripts/: stop_services.bat
src/: device.rs  device_hid.rs  error.rs  ffi.rs  input.rs  lib.rs  main.rs  ni_ipc.rs  output.rs
unity/: CHANGELOG.md  DiagnosticHelper.cs  DisplayTest.cs  MaschineExampleController.cs  MaschineMK3HardwareService.cs  MaschineMK3Native.cs  README.md
wireshark_dumps/: blank init 2.pcapng  blank init 3.pcapng  blank_to_midimode.pcapng  button_fillsquare_leftscreen.pcapng  first.raw  holdshift_screenswap.pcapng  init1A.raw  init1b.raw  knobturn_fillbar.pcapng  knobturn_fillbar_rightscreen.pcapng  midimode_buttonpress_colorsquare_right.pcapng  midmode_to_blank.pcapng  second.raw  switchpage.pcapng
