[package]
name = "mk3-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
rusb = "0.9"
hidapi = "2.6"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem", 
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_SystemServices"
] }
# Add std UDP socket support for NI service discovery
socket2 = "0.5"
