[package]
name = "maschine3-hal"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Rose <spencer@srose.io>"]
description = "Hardware abstraction layer for Native Instruments Maschine MK3 controller (Windows only)"
documentation = "https://docs.rs/maschine3-hal"
repository = "https://github.com/srose-io/maschine3-hal"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["maschine", "midi", "controller", "native-instruments", "usb-hid"]
categories = ["hardware-support", "multimedia::audio", "api-bindings"]
exclude = [
    "wireshark_dumps/*",
    "shell_scripts/*",
    "*.pcapng",
    "*.raw"
]

[dependencies]
rusb = "0.9"
hidapi = "2.6"
thiserror = "1.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem", 
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_SystemServices"
] }
